force-app/main/default/objects/Contact/fields/DigiApp_Link__c.field-meta.xml
<CustomField>
    <fullName>DigiApp_Link__c</fullName>
    <description>Consultant DigiApp Link</description>
    <label>DigiApp Link</label>
    <type>TextArea</type>
</CustomField>