force-app/main/default/objects/Contact/fields/LastOppAssignDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastOppAssignDateTime__c</fullName>
    <label>Last Opportunity Assignment</label>
    <type>DateTime</type>
</CustomField>