force-app/main/default/objects/Contact/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always Visible</fullName>
                <default>true</default>
                <label>Always Visible</label>
            </value>
            <value>
                <fullName>Visible for Bond Only</fullName>
            </value>
            <value>
                <fullName>Visible for General and Pre-Approval</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>