force-app/main/default/objects/Contact/recordTypes/BetterBond_Contact.recordType-meta.xml
<RecordType>
    <fullName>BetterBond_Contact</fullName>
    <active>true</active>
    <label>BetterBond Contact</label>
</RecordType>