force-app/main/default/objects/Contact/recordTypes/Development_Agent.recordType-meta.xml
<RecordType>
    <fullName>Development_Agent</fullName>
    <active>true</active>
    <label>Development Agent</label>
</RecordType>