force-app/main/default/objects/Contact/recordTypes/External_Source_Contact.recordType-meta.xml
<RecordType>
    <fullName>External_Source_Contact</fullName>
    <active>true</active>
    <label>External Source Contact</label>
</RecordType>