force-app/main/default/objects/Contact/recordTypes/Real_Estate_Agent.recordType-meta.xml
<RecordType>
    <fullName>Real_Estate_Agent</fullName>
    <active>true</active>
    <label>Real Estate Agent</label>
</RecordType>