force-app/main/default/objects/Contact/validationRules/Credit_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Credit_check_complete__c = True,  ISPICKVAL(Credit_Status__c,&quot;&quot;))</errorConditionFormula>
    <errorMessage>Credit status is required</errorMessage>
</ValidationRule>